--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -144,13 +144,113 @@ a:visited {
 
 .link {
   padding: 5px;
-  border:1px solid black;
+  /*border:1px solid black;*/
+  border: 2px solid #3CC7FD;
   border-radius:8px;
-  background-color: #494949;
+  background-color: #073165;
+  background-color: -webkit-linear-gradient(left top, #073165, #001439);
+  background: -o-linear-gradient(bottom right, #073165, #001439); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #073165, #001439); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, #073165, #001439); /* Standard syntax */
+  /*background-color: #494949;*/
   /*background:-webkit-linear-gradient(top,  #494949 0%,#707070 100%);*/
   z-index:2;
 }
 
 .link:hover {
   background-color: #707070;
+  border-bottom-color: #F5FEFF;
+  box-shadow: 0 0 10px #F5FEFF;
+  /*box-shadow: 0 4px 2px -2px #F5FEFF;*/
 }
+
+.player-wrapper {
+  width: 100%;
+  height: 100px;
+  background-color: black;
+  border: 1px solid grey;
+  border-radius: 8px;
+}
+
+.react-player {
+  margin-bottom: 10px;
+  background: rgba(#000, .1);
+}
+
+.circle {
+  border-radius: 50%;
+  background-color: teal;
+  color: black;
+}
+
+.hide {
+  opacity: 0;
+  display: none;
+}
+
+table {
+  border: 1px solid grey;
+  border-radius: 8px;
+  background-color: #21003f;
+  width: 100%;
+}
+
+th {
+  margin: 2px;
+}
+
+td {
+  padding: 2px;
+  text-align: center;
+}
+
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content Link {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+
+.bevelBox
+{
+    background-color: #3C3C3C;
+
+    border: 1px solid #000000;
+
+    -moz-box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(0, 0, 0, .4);
+    -webkit-box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(0, 0, 0, .4);
+    box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .4), inset -2px -2px 2px rgba(0, 0, 0, .4);
+  }
