Add seek functionality and css

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -6,7 +6,8 @@
 
   &-elapsed,
   &-value {
-    background: gray;
+    // background: gray;
+    background: green;
     border-radius: 4px;
   }
 
