--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -118,7 +118,7 @@ a:visited {
   background: #3C3C3C;
 }
 
-.container {
+/*.container {
   background: #218396;
   border-width: 5px;
   border-style: solid;
@@ -126,6 +126,20 @@ a:visited {
   border-radius: 25px;
   padding: 20px;
   margin: 20px;
+}*/
+
+.podcast-tile {
+  background: #218396;
+  border-width: 2px;
+  border-style: solid;
+  border-color: #FFFFFF;
+  border-radius: 10px;
+  padding: 5px;
+  text-align: center;
+}
+
+.podcast-tile:hover {
+  background: #3C3C3C;
 }
 
 .player-container {
@@ -269,3 +283,23 @@ td {
   height: 30px;
   width: 100%;
 }*/
+
+.progress-bar {
+  width: 100%;
+}
+
+.progress-bar input {
+  width: 100%;
+}
+
+.volume-bar {
+  width: 40px;
+}
+
+.volume-bar input {
+  width: 80px;
+  margin: 25px;
+}
+
+.grid-item { width: 200px; }
+.grid-item--width2 { width: 400px; }
