--- a/app/assets/stylesheets/skeleton.css
+++ b/app/assets/stylesheets/skeleton.css
@@ -238,6 +238,7 @@ select {
   padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
   background-color: #fff;
   border: 1px solid #D1D1D1;
+  color: black;
   border-radius: 4px;
   box-shadow: none;
   box-sizing: border-box; }
