fixed syntax error

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -130,7 +130,7 @@ a:visited {
 
 .podcast-tile {
   /*background: #218396;*/
-  background-color: #3C3C3C
+  background-color: #3C3C3C;
   border-width: 2px;
   border-style: solid;
   border-color: #FFFFFF;
