--- a/app/assets/stylesheets/skeleton.css
+++ b/app/assets/stylesheets/skeleton.css
@@ -148,7 +148,7 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /*font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
   color: #222; }
 
 
@@ -206,7 +206,9 @@ input[type="button"] {
   text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
-  background-color: transparent;
+  /*background: #ea5a64;*/
+  background: #3C3C3C;
+  /*background-color: transparent;*/
   border-radius: 4px;
   border: 1px solid #bbb;
   cursor: pointer;
@@ -223,7 +225,9 @@ input[type="reset"]:focus,
 input[type="button"]:focus {
   color: #333;
   border-color: #888;
-  outline: 0; }
+  outline: 0;
+  /*background: #ea5a64;*/
+}
 .button.button-primary,
 button.button-primary,
 input[type="submit"].button-primary,
@@ -231,7 +235,8 @@ input[type="reset"].button-primary,
 input[type="button"].button-primary {
   color: #FFF;
   background-color: #33C3F0;
-  border-color: #33C3F0; }
+  border-color: #33C3F0;
+}
 .button.button-primary:hover,
 button.button-primary:hover,
 input[type="submit"].button-primary:hover,
@@ -244,7 +249,9 @@ input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
   color: #FFF;
   background-color: #1EAEDB;
-  border-color: #1EAEDB; }
+  border-color: #1EAEDB;
+  /*background: #ea5a64;*/
+}
 
 
 /* Forms
