--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -244,7 +244,7 @@ a:visited {
 }
 
 table {
-  display: block
+  display: block;
   border: 1px solid grey;
   border-radius: 8px;
   background-color: #36363B;
