--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -606,7 +606,7 @@ body {
   background-color: black;
   margin: 0px auto;
   z-index: -1;
-  margin: 30px auto 0 auto
+  margin: 30px auto 0 auto;
   padding: 0;
   width: 100%;
   /*background-color: #52527a;*/
