--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -7,7 +7,10 @@
   &-elapsed,
   &-value {
     // background: gray;
-    background: green;
+    // background: green;
+    // .background: #72b3e5;
+    background: #86e0d2;
+
     border-radius: 4px;
   }
 
@@ -43,7 +46,8 @@
 
     .ProgressBar-elapsed,
     .VolumeSlider-value {
-      background: green;
+      // background: green;
+      background: #29e4e8;
     }
   }
 }
