--- a/app/assets/stylesheets/skeleton.css
+++ b/app/assets/stylesheets/skeleton.css
@@ -198,7 +198,8 @@ input[type="button"] {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
-  color: #555;
+  /*color: #555;*/
+  color: #FFFFFF;
   text-align: center;
   font-size: 11px;
   font-weight: 600;
