--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1027,5 +1027,5 @@ input[type='range']::-webkit-slider-thumb
   text-align: center;
   z-index: -100;
   clear: both;
-  margin-top: -50px;*/
+  margin-top: -50px;
 }
