--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -65,15 +65,11 @@ a:visited {
   text-decoration: none;
 }
 
-.link {
-  display: inline-block;
-  margin-left: 10px;
-}
-
 .top-bar-section {
-  display: inline-block;
-  float: right;
-  padding: 10px 10px 0px 0px;
+  /*display: inline-block;*/
+  /*float: right;*/
+  /*position: fixed;*/
+  /*padding: 10px 10px 0px 0px;*/
   z-index: 99;
   /*margin-top: 5px;*/
 }
@@ -89,7 +85,8 @@ a:visited {
 }
 
 .top-bar {
-  background-color: #3C3C3C;
+  background: #000;
+  /*background-color: #3C3C3C;*/
   padding: 10px 0;
   border-bottom: 2px #FFFFFF solid;
   display: inline-block;
@@ -150,7 +147,7 @@ a:visited {
 
 .podcast-tile {
   /*background: #218396;*/
-  font-family: 'Merriweather', serif;
+  /*font-family: 'Merriweather', serif;*/
   /*background-color: #3C3C3C;*/
   background-color: #ea5a64;
   border-width: 2px;
@@ -216,8 +213,8 @@ a:visited {
 }*/
 
 .link:hover {
-  background-color: #707070;
-  border-bottom-color: #F5FEFF;
+  /*background-color: #707070;*/
+  /*border-bottom-color: #F5FEFF;*/
   /*box-shadow: 0 0 10px #F5FEFF;*/
   /*box-shadow: 0 4px 2px -2px #F5FEFF;*/
 }
@@ -316,6 +313,7 @@ td {
 .bevelBox
 {
   background-color: #3C3C3C;
+  /*background: #000;*/
 
   border: 1px solid #000000;
 
@@ -1028,4 +1026,109 @@ input[type='range']::-webkit-slider-thumb
   z-index: -100;
   clear: both;
   margin-top: -50px;
+}
+
+#site-navigation #main-menu,
+#site-navigation > input {
+  display: none;
+}
+
+
+#site-navigation > label {
+  margin-top: -10px;
+  display: block;
+  font-size: 36px;
+  color: #fff;
+  position: absolute;
+  right: 20px;
+  width: 36px;
+  padding: 0;
+  cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/*#site-navigation ul {
+  -webkit-animation: fadein 3s;
+  -moz-animation: fadein 3s;
+  -ms-animation: fadein 3s;
+  -o-animation: fadein 3s;
+  animation: fadein 3s;
+}*/
+
+#site-navigation > input:checked + #main-menu {
+  display: block;
+  clear: both;
+  top: 36px;
+  position: relative;
+  /*background: #000;*/
+  color: #fff;
+}
+
+#site-navigation ul li {
+  display: block;
+  padding: 12px 10px;
+  width: 100%;
+}
+
+.link {
+  width: 100%;
+  display: inline-block;
+  height: 100%;
+}
+
+#site-navigation a {
+  text-decoration: none;
+  color: #fff;
+  transition: 2s;
+}
+
+#site-navigation li {
+  transition: 2s;
+}
+
+#site-navigation li:hover {
+  background-color: #707070;
+  border-bottom-color: #F5FEFF;
+  cursor: pointer
+}
+
+@keyframes dropDownFromTop {
+  0% {
+    height: 0;
+    /*transform: translateY(-100%);*/
+    opacity: 0;
+    overflow: hidden;
+  }
+  100% {
+    height: auto;
+    /*transform: translateY(0);*/
+    opacity: 1;
+  }
+}
+
+@media only screen and (min-device-width: 768px) {
+  #site-navigation {
+    height: auto;
+  }
+  #site-navigation #main-menu {
+    display: block;
+    float: right;
+    margin: 0 20px;
+  }
+  #site-navigation > label {
+    display: none
+  }
+  #site-navigation ul li {
+    display: inline-block;
+    width: auto;
+  }
+  .link {
+    display: inline-block;
+    margin: 0 10px;
+  }
 }
